psASM/Parsing/psASMantlr4/psASMParser.py
# Generated from psASMParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class psASMParser ( Parser ):

    grammarFileName = "psASMParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "','", "'@define'", "'@include'", 
                     "'@include_once'", "'@if'", "'@ifdef'", "'@ifndef'", 
                     "'@elif'", "'@else'", "'@for'", "'@print'", "'@error'", 
                     "'@ascii_heap'", "'@ascii_stack'", "'@macro'", "'@end'", 
                     "'defined'", "'sprintf'", "'strlen'", "'cat_id'", "'('", 
                     "')'", "'!'", "'~'", "'/'", "'*'", "'%'", "'+'", "'-'", 
                     "'<<'", "'>>'", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'!='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'?'", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "INST", "COMMA", "DEFINE", "INCLUDE", 
                      "INCLUDE_ONCE", "IF", "IFDEF", "IFNDEF", "ELIF", "ELSE", 
                      "FOR", "PRINT", "ERROR", "ASCII_HEAP", "ASCII_STACK", 
                      "MACRO", "END", "DEFINED", "SPRINTF", "STRLEN", "CATID", 
                      "LPAREN", "RPAREN", "NOT", "BIT_NOT", "DIV", "MUL", 
                      "MOD", "PLUS", "MINUS", "LSHFIT", "RSHIFT", "LESS", 
                      "LESS_EQ", "GREATER", "GREATER_EQ", "EQ", "NEQ", "BIT_AND", 
                      "BIT_XOR", "BIT_OR", "AND", "OR", "QUEST", "COLON", 
                      "BINARY_LITERAL", "HEX_LITERAL", "DEC_LITERAL", "CHAR_START", 
                      "CHAR_ESCAPE", "CHAR", "CHAR_END", "CHAR_EOL", "CHAR_ERROR_CHAR", 
                      "STRING_START", "STRING_CHAR_ESCAPE", "STRING_CHAR", 
                      "STRING_END", "STRING_EOL", "STRING_ERROR_CHAR", "IDENTIFIER_LITERAL", 
                      "COMMENT", "WS", "EOL", "ERROR_CHAR" ]

    RULE_line = 0
    RULE_line_content = 1
    RULE_instruction = 2
    RULE_labels = 3
    RULE_preproc_directive = 4
    RULE_preproc_identifier = 5
    RULE_preproc_define = 6
    RULE_preproc_include = 7
    RULE_preproc_include_once = 8
    RULE_preproc_if = 9
    RULE_preproc_ifdef = 10
    RULE_preproc_ifndef = 11
    RULE_preproc_elif = 12
    RULE_preproc_else = 13
    RULE_preproc_for = 14
    RULE_preproc_end = 15
    RULE_preproc_print = 16
    RULE_preproc_error = 17
    RULE_preproc_ascii_heap = 18
    RULE_preproc_ascii_stack = 19
    RULE_preproc_macro = 20
    RULE_preproc_macro_expansion = 21
    RULE_expr = 22
    RULE_atom = 23
    RULE_numerical_literal = 24
    RULE_string_literal = 25
    RULE_char_literal = 26

    ruleNames =  [ "line", "line_content", "instruction", "labels", "preproc_directive", 
                   "preproc_identifier", "preproc_define", "preproc_include", 
                   "preproc_include_once", "preproc_if", "preproc_ifdef", 
                   "preproc_ifndef", "preproc_elif", "preproc_else", "preproc_for", 
                   "preproc_end", "preproc_print", "preproc_error", "preproc_ascii_heap", 
                   "preproc_ascii_stack", "preproc_macro", "preproc_macro_expansion", 
                   "expr", "atom", "numerical_literal", "string_literal", 
                   "char_literal" ]

    EOF = Token.EOF
    INST=1
    COMMA=2
    DEFINE=3
    INCLUDE=4
    INCLUDE_ONCE=5
    IF=6
    IFDEF=7
    IFNDEF=8
    ELIF=9
    ELSE=10
    FOR=11
    PRINT=12
    ERROR=13
    ASCII_HEAP=14
    ASCII_STACK=15
    MACRO=16
    END=17
    DEFINED=18
    SPRINTF=19
    STRLEN=20
    CATID=21
    LPAREN=22
    RPAREN=23
    NOT=24
    BIT_NOT=25
    DIV=26
    MUL=27
    MOD=28
    PLUS=29
    MINUS=30
    LSHFIT=31
    RSHIFT=32
    LESS=33
    LESS_EQ=34
    GREATER=35
    GREATER_EQ=36
    EQ=37
    NEQ=38
    BIT_AND=39
    BIT_XOR=40
    BIT_OR=41
    AND=42
    OR=43
    QUEST=44
    COLON=45
    BINARY_LITERAL=46
    HEX_LITERAL=47
    DEC_LITERAL=48
    CHAR_START=49
    CHAR_ESCAPE=50
    CHAR=51
    CHAR_END=52
    CHAR_EOL=53
    CHAR_ERROR_CHAR=54
    STRING_START=55
    STRING_CHAR_ESCAPE=56
    STRING_CHAR=57
    STRING_END=58
    STRING_EOL=59
    STRING_ERROR_CHAR=60
    IDENTIFIER_LITERAL=61
    COMMENT=62
    WS=63
    EOL=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line_content(self):
            return self.getTypedRuleContext(psASMParser.Line_contentContext,0)


        def EOL(self):
            return self.getToken(psASMParser.EOL, 0)

        def getRuleIndex(self):
            return psASMParser.RULE_line

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = psASMParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.line_content()
            self.state = 55
            self.match(psASMParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Line_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return psASMParser.RULE_line_content

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Labels_lineContext(Line_contentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a psASMParser.Line_contentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def labels(self):
            return self.getTypedRuleContext(psASMParser.LabelsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabels_line" ):
                return visitor.visitLabels_line(self)
            else:
                return visitor.visitChildren(self)


    class Preproc_lineContext(Line_contentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a psASMParser.Line_contentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def preproc_directive(self):
            return self.getTypedRuleContext(psASMParser.Preproc_directiveContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreproc_line" ):
                return visitor.visitPreproc_line(self)
            else:
                return visitor.visitChildren(self)


    class Instruction_lineContext(Line_contentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a psASMParser.Line_contentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def instruction(self):
            return self.getTypedRuleContext(psASMParser.InstructionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction_line" ):
                return visitor.visitInstruction_line(self)
            else:
                return visitor.visitChildren(self)


    class Empty_lineContext(Line_contentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a psASMParser.Line_contentContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmpty_line" ):
                return visitor.visitEmpty_line(self)
            else:
                return visitor.visitChildren(self)



    def line_content(self):

        localctx = psASMParser.Line_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line_content)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = psASMParser.Preproc_lineContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.preproc_directive()
                pass

            elif la_ == 2:
                localctx = psASMParser.Instruction_lineContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.instruction()
                pass

            elif la_ == 3:
                localctx = psASMParser.Labels_lineContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.labels()
                pass

            elif la_ == 4:
                localctx = psASMParser.Empty_lineContext(self, localctx)
                self.enterOuterAlt(localctx, 4)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstructionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lbls = None # LabelsContext
            self.inst = None # Token
            self._expr = None # ExprContext
            self.args = list() # of ExprContexts

        def INST(self):
            return self.getToken(psASMParser.INST, 0)

        def labels(self):
            return self.getTypedRuleContext(psASMParser.LabelsContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(psASMParser.ExprContext)
            else:
                return self.getTypedRuleContext(psASMParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(psASMParser.COMMA)
            else:
                return self.getToken(psASMParser.COMMA, i)

        def getRuleIndex(self):
            return psASMParser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = psASMParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==psASMParser.CATID or _la==psASMParser.IDENTIFIER_LITERAL:
                self.state = 63
                localctx.lbls = self.labels()


            self.state = 66
            localctx.inst = self.match(psASMParser.INST)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << psASMParser.DEFINED) | (1 << psASMParser.SPRINTF) | (1 << psASMParser.STRLEN) | (1 << psASMParser.CATID) | (1 << psASMParser.LPAREN) | (1 << psASMParser.NOT) | (1 << psASMParser.BIT_NOT) | (1 << psASMParser.PLUS) | (1 << psASMParser.MINUS) | (1 << psASMParser.BINARY_LITERAL) | (1 << psASMParser.HEX_LITERAL) | (1 << psASMParser.DEC_LITERAL) | (1 << psASMParser.CHAR_START) | (1 << psASMParser.STRING_START) | (1 << psASMParser.IDENTIFIER_LITERAL))) != 0):
                self.state = 67
                localctx._expr = self.expr(0)
                localctx.args.append(localctx._expr)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==psASMParser.COMMA:
                    self.state = 68
                    self.match(psASMParser.COMMA)
                    self.state = 69
                    localctx._expr = self.expr(0)
                    localctx.args.append(localctx._expr)
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LabelsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._preproc_identifier = None # Preproc_identifierContext
            self.lbls = list() # of Preproc_identifierContexts

        def COLON(self):
            return self.getToken(psASMParser.COLON, 0)

        def preproc_identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(psASMParser.Preproc_identifierContext)
            else:
                return self.getTypedRuleContext(psASMParser.Preproc_identifierContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(psASMParser.COMMA)
            else:
                return self.getToken(psASMParser.COMMA, i)

        def getRuleIndex(self):
            return psASMParser.RULE_labels

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabels" ):
                return visitor.visitLabels(self)
            else:
                return visitor.visitChildren(self)




    def labels(self):

        localctx = psASMParser.LabelsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_labels)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            localctx._preproc_identifier = self.preproc_identifier()
            localctx.lbls.append(localctx._preproc_identifier)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==psASMParser.COMMA:
                self.state = 78
                self.match(psASMParser.COMMA)
                self.state = 79
                localctx._preproc_identifier = self.preproc_identifier()
                localctx.lbls.append(localctx._preproc_identifier)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(psASMParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Preproc_directiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def preproc_define(self):
            return self.getTypedRuleContext(psASMParser.Preproc_defineContext,0)


        def preproc_include(self):
            return self.getTypedRuleContext(psASMParser.Preproc_includeContext,0)


        def preproc_include_once(self):
            return self.getTypedRuleContext(psASMParser.Preproc_include_onceContext,0)


        def preproc_if(self):
            return self.getTypedRuleContext(psASMParser.Preproc_ifContext,0)


        def preproc_ifdef(self):
            return self.getTypedRuleContext(psASMParser.Preproc_ifdefContext,0)


        def preproc_ifndef(self):
            return self.getTypedRuleContext(psASMParser.Preproc_ifndefContext,0)


        def preproc_elif(self):
            return self.getTypedRuleContext(psASMParser.Preproc_elifContext,0)


        def preproc_else(self):
            return self.getTypedRuleContext(psASMParser.Preproc_elseContext,0)


        def preproc_for(self):
            return self.getTypedRuleContext(psASMParser.Preproc_forContext,0)


        def preproc_end(self):
            return self.getTypedRuleContext(psASMParser.Preproc_endContext,0)


        def preproc_print(self):
            return self.getTypedRuleContext(psASMParser.Preproc_printContext,0)


        def preproc_error(self):
            return self.getTypedRuleContext(psASMParser.Preproc_errorContext,0)


        def preproc_ascii_heap(self):
            return self.getTypedRuleContext(psASMParser.Preproc_ascii_heapContext,0)


        def preproc_ascii_stack(self):
            return self.getTypedRuleContext(psASMParser.Preproc_ascii_stackContext,0)


        def preproc_macro(self):
            return self.getTypedRuleContext(psASMParser.Preproc_macroContext,0)


        def preproc_macro_expansion(self):
            return self.getTypedRuleContext(psASMParser.Preproc_macro_expansionContext,0)


        def getRuleIndex(self):
            return psASMParser.RULE_preproc_directive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreproc_directive" ):
                return visitor.visitPreproc_directive(self)
            else:
                return visitor.visitChildren(self)




    def preproc_directive(self):

        localctx = psASMParser.Preproc_directiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_preproc_directive)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [psASMParser.DEFINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.preproc_define()
                pass
            elif token in [psASMParser.INCLUDE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.preproc_include()
                pass
            elif token in [psASMParser.INCLUDE_ONCE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.preproc_include_once()
                pass
            elif token in [psASMParser.IF]:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.preproc_if()
                pass
            elif token in [psASMParser.IFDEF]:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.preproc_ifdef()
                pass
            elif token in [psASMParser.IFNDEF]:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.preproc_ifndef()
                pass
            elif token in [psASMParser.ELIF]:
                self.enterOuterAlt(localctx, 7)
                self.state = 93
                self.preproc_elif()
                pass
            elif token in [psASMParser.ELSE]:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.preproc_else()
                pass
            elif token in [psASMParser.FOR]:
                self.enterOuterAlt(localctx, 9)
                self.state = 95
                self.preproc_for()
                pass
            elif token in [psASMParser.END]:
                self.enterOuterAlt(localctx, 10)
                self.state = 96
                self.preproc_end()
                pass
            elif token in [psASMParser.PRINT]:
                self.enterOuterAlt(localctx, 11)
                self.state = 97
                self.preproc_print()
                pass
            elif token in [psASMParser.ERROR]:
                self.enterOuterAlt(localctx, 12)
                self.state = 98
                self.preproc_error()
                pass
            elif token in [psASMParser.ASCII_HEAP]:
                self.enterOuterAlt(localctx, 13)
                self.state = 99
                self.preproc_ascii_heap()
                pass
            elif token in [psASMParser.ASCII_STACK]:
                self.enterOuterAlt(localctx, 14)
                self.state = 100
                self.preproc_ascii_stack()
                pass
            elif token in [psASMParser.MACRO]:
                self.enterOuterAlt(localctx, 15)
                self.state = 101
                self.preproc_macro()
                pass
            elif token in [psASMParser.CATID, psASMParser.IDENTIFIER_LITERAL]:
                self.enterOuterAlt(localctx, 16)
                self.state = 102
                self.preproc_macro_expansion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Preproc_identifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return psASMParser.RULE_preproc_identifier

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Catid_identifierContext(Preproc_identifierContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a psASMParser.Preproc_identifierContext
            super().__init__(parser)
            self._preproc_identifier = None # Preproc_identifierContext
            self.args = list() # of Preproc_identifierContexts
            self.copyFrom(ctx)

        def CATID(self):
            return self.getToken(psASMParser.CATID, 0)
        def LPAREN(self):
            return self.getToken(psASMParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(psASMParser.RPAREN, 0)
        def preproc_identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(psASMParser.Preproc_identifierContext)
            else:
                return self.getTypedRuleContext(psASMParser.Preproc_identifierContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(psASMParser.COMMA)
            else:
                return self.getToken(psASMParser.COMMA, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCatid_identifier" ):
                return visitor.visitCatid_identifier(self)
            else:
                return visitor.visitChildren(self)


    class Literal_identifierContext(Preproc_identifierContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a psASMParser.Preproc_identifierContext
            super().__init__(parser)
            self.identifier = None # Token
            self.copyFrom(ctx)

        def IDENTIFIER_LITERAL(self):
            return self.getToken(psASMParser.IDENTIFIER_LITERAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral_identifier" ):
                return visitor.visitLiteral_identifier(self)
            else:
                return visitor.visitChildren(self)



    def preproc_identifier(self):

        localctx = psASMParser.Preproc_identifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_preproc_identifier)
        self._la = 0 # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [psASMParser.IDENTIFIER_LITERAL]:
                localctx = psASMParser.Literal_identifierContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                localctx.identifier = self.match(psASMParser.IDENTIFIER_LITERAL)
                pass
            elif token in [psASMParser.CATID]:
                localctx = psASMParser.Catid_identifierContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(psASMParser.CATID)
                self.state = 107
                self.match(psASMParser.LPAREN)
                self.state = 108
                localctx._preproc_identifier = self.preproc_identifier()
                localctx.args.append(localctx._preproc_identifier)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 109
                    self.match(psASMParser.COMMA)
                    self.state = 110
                    localctx._preproc_identifier = self.preproc_identifier()
                    localctx.args.append(localctx._preproc_identifier)
                    self.state = 113 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==psASMParser.COMMA):
                        break

                self.state = 115
                self.match(psASMParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Preproc_defineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Preproc_identifierContext
            self.value = None # ExprContext

        def DEFINE(self):
            return self.getToken(psASMParser.DEFINE, 0)

        def preproc_identifier(self):
            return self.getTypedRuleContext(psASMParser.Preproc_identifierContext,0)


        def expr(self):
            return self.getTypedRuleContext(psASMParser.ExprContext,0)


        def getRuleIndex(self):
            return psASMParser.RULE_preproc_define

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreproc_define" ):
                return visitor.visitPreproc_define(self)
            else:
                return visitor.visitChildren(self)




    def preproc_define(self):

        localctx = psASMParser.Preproc_defineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_preproc_define)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(psASMParser.DEFINE)
            self.state = 120
            localctx.name = self.preproc_identifier()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << psASMParser.DEFINED) | (1 << psASMParser.SPRINTF) | (1 << psASMParser.STRLEN) | (1 << psASMParser.CATID) | (1 << psASMParser.LPAREN) | (1 << psASMParser.NOT) | (1 << psASMParser.BIT_NOT) | (1 << psASMParser.PLUS) | (1 << psASMParser.MINUS) | (1 << psASMParser.BINARY_LITERAL) | (1 << psASMParser.HEX_LITERAL) | (1 << psASMParser.DEC_LITERAL) | (1 << psASMParser.CHAR_START) | (1 << psASMParser.STRING_START) | (1 << psASMParser.IDENTIFIER_LITERAL))) != 0):
                self.state = 121
                localctx.value = self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Preproc_includeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.file_str = None # String_literalContext

        def INCLUDE(self):
            return self.getToken(psASMParser.INCLUDE, 0)

        def string_literal(self):
            return self.getTypedRuleContext(psASMParser.String_literalContext,0)


        def getRuleIndex(self):
            return psASMParser.RULE_preproc_include

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreproc_include" ):
                return visitor.visitPreproc_include(self)
            else:
                return visitor.visitChildren(self)




    def preproc_include(self):

        localctx = psASMParser.Preproc_includeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_preproc_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(psASMParser.INCLUDE)
            self.state = 125
            localctx.file_str = self.string_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Preproc_include_onceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE_ONCE(self):
            return self.getToken(psASMParser.INCLUDE_ONCE, 0)

        def getRuleIndex(self):
            return psASMParser.RULE_preproc_include_once

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreproc_include_once" ):
                return visitor.visitPreproc_include_once(self)
            else:
                return visitor.visitChildren(self)




    def preproc_include_once(self):

        localctx = psASMParser.Preproc_include_onceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_preproc_include_once)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(psASMParser.INCLUDE_ONCE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Preproc_ifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cond = None # ExprContext

        def IF(self):
            return self.getToken(psASMParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(psASMParser.ExprContext,0)


        def getRuleIndex(self):
            return psASMParser.RULE_preproc_if

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreproc_if" ):
                return visitor.visitPreproc_if(self)
            else:
                return visitor.visitChildren(self)




    def preproc_if(self):

        localctx = psASMParser.Preproc_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_preproc_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(psASMParser.IF)
            self.state = 130
            localctx.cond = self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Preproc_ifdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.arg = None # Preproc_identifierContext

        def IFDEF(self):
            return self.getToken(psASMParser.IFDEF, 0)

        def preproc_identifier(self):
            return self.getTypedRuleContext(psASMParser.Preproc_identifierContext,0)

